--- a/contact.html
+++ b/contact.html
@@ -72,13 +72,19 @@
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="stylesheet" href="css/page-transition.css">
 	<link rel="stylesheet" href="css/contact.css">
+	<link rel="stylesheet" href="css/animation.css">
 </head>
 
 <body>
 	<header class="site-header" id="siteHeader">
-		<a href="/" class="logo-link">
-			<img src="img/reiwachan.png" alt="Logo" class="header-logo">
-		</a>
+		<div class="header-logo-container">
+			<a href="/" class="logo-link">
+				<img src="img/reiwachan.png" alt="Logo" class="header-logo">
+			</a>
+			<div class="site-header-msg">
+				<h2>SNSを通じて、人々の便利を作る</h2>
+			</div>
+		</div>
 		<nav class="header-nav">
 			<a href="service.html">Service</a>
 			<a href="company.html">Company</a>
@@ -170,11 +176,6 @@
 				</div>
 
 				<div class="company-overview-row">
-					<div class="company-overview-label">顧問社労士事務所</div>
-					<div class="company-overview-content">行政書士法人フラット法務事務所</div>
-				</div>
-
-				<div class="company-overview-row">
 					<div class="company-overview-label">主要取引銀行</div>
 					<div class="company-overview-content">三井住友銀行 新宿西口支店</div>
 				</div>
@@ -257,13 +258,8 @@
 					<a href="https://page.line.me/fhy3551i?openQrModal=true">Line</a>
 					<a href="https://www.instagram.com/reiwa_girls_official_/">Instagram</a>
 				</div>
-
-				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>〒108-0073<br>東京都港区三田1-11-22 SSTビル1階</p>
-				</div>
-
 				<div class="footer-bottom">
-					<small>© REIWAGIRLS</small>
+					<small>ReiwaGirls Co., Ltd.｜SNS運用・インフルエンサー支援・アパレル制作</small>
 				</div>
 			</div>
 
