--- a/index.html
+++ b/index.html
@@ -150,7 +150,12 @@
 	<!-- ヘッダー / ヒーローセクション -->
 
 	<header id="header" class="init">
-		<img id="main-logo" class="logo-reiwachan" src="img/reiwachan.png" alt="Logo" />
+		<div class="header-logo-container">
+			<img id="main-logo" class="logo-reiwachan" src="img/reiwachan.png" alt="Logo" />
+			<div class="site-header-msg">
+				<h2>SNSを通じて、人々の便利を作る</h2>
+			</div>
+		</div>
 		<nav class="nav-links">
 			<a href="service.html">Service</a>
 			<a href="company.html">Company</a>
@@ -259,8 +264,9 @@
 			</div>
 			<div class="catch-wrapper">
 				<h1 class="outlined-text animate-text .fade-out-up-smooth">
-					次世代を築くための<br>
-					アイドルプラットフォーム</h1>
+					時代を築くための<br>
+					インフルエンサープラットフォーム
+				</h1>
 			</div>
 		</section>
 	</section>
@@ -512,13 +518,8 @@
 					<a href="https://page.line.me/fhy3551i?openQrModal=true">Line</a>
 					<a href="https://www.instagram.com/reiwa_girls_official_/">Instagram</a>
 				</div>
-
-				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>〒108-0073<br>東京都港区三田1-11-22 SSTビル1階</p>
-				</div>
-
 				<div class="footer-bottom">
-					<small>© REIWAGIRLS</small>
+					<small>ReiwaGirls Co., Ltd.｜SNS運用・インフルエンサー支援・アパレル制作</small>
 				</div>
 			</div>
 		</div>
