--- a/recruit.html
+++ b/recruit.html
@@ -22,7 +22,7 @@
 	<meta property="og:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg>
 
 	<!-- Twitterカード -->
-	<meta name="twitter:card" content="summary_large_image">
+	<meta name=" twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="採用情報｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="多様な働き方と夢を支援。REIWAGIRLSの採用情報はこちら。">
 	<meta name="twitter:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
@@ -78,6 +78,7 @@
 	<link rel="stylesheet" href="css/recruit.css">
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="stylesheet" href="css/header-basic.css">
+	<link rel="stylesheet" href="css/animation.css">
 	<!-- CSSの読み込み -->
 	<link rel="stylesheet" href="css/page-transition.css">
 
@@ -85,9 +86,14 @@
 
 <body>
 	<header class="site-header" id="siteHeader">
-		<a href="/" class="logo-link">
-			<img src="img/reiwachan.png" alt="Logo" class="header-logo">
-		</a>
+		<div class="header-logo-container">
+			<a href="/" class="logo-link">
+				<img src="img/reiwachan.png" alt="Logo" class="header-logo">
+			</a>
+			<div class="site-header-msg">
+				<h2>SNSを通じて、人々の便利を作る</h2>
+			</div>
+		</div>
 		<nav class="header-nav">
 			<a href="service.html">Service</a>
 			<a href="company.html">Company</a>
@@ -96,6 +102,7 @@
 			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
+
 
 	<!-- モバイルメニューボタンとオーバーレイはここ！ -->
 	<div class="mobile-menu-button" id="mobileMenuButton">
@@ -137,10 +144,10 @@
 
 		<div class="recruit-tab-buttons">
 			<button class="recruit-tab-button active" data-tab="idol">採用体制準備中・・・</button>
-<!--			<button class="recruit-tab-button active" data-tab="idol">アイドル</button>-->
-<!--			<button class="recruit-tab-button" data-tab="liver">ライバー</button>-->
-<!--			<button class="recruit-tab-button" data-tab="office">事務</button>-->
-<!--			<button class="recruit-tab-button" data-tab="pr">広報</button>-->
+			<!--			<button class="recruit-tab-button active" data-tab="idol">アイドル</button>-->
+			<!--			<button class="recruit-tab-button" data-tab="liver">ライバー</button>-->
+			<!--			<button class="recruit-tab-button" data-tab="office">事務</button>-->
+			<!--			<button class="recruit-tab-button" data-tab="pr">広報</button>-->
 		</div>
 
 		<div id="idol" class="recruit-tab-content active">
@@ -284,13 +291,8 @@
 					<a href="https://page.line.me/fhy3551i?openQrModal=true">Line</a>
 					<a href="https://www.instagram.com/reiwa_girls_official_/">Instagram</a>
 				</div>
-
-				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>〒108-0073<br>東京都港区三田1-11-22 SSTビル1階</p>
-				</div>
-
 				<div class="footer-bottom">
-					<small>© REIWAGIRLS</small>
+					<small>ReiwaGirls Co., Ltd.｜SNS運用・インフルエンサー支援・アパレル制作</small>
 				</div>
 			</div>
 
