--- a/top.html
+++ b/top.html
@@ -106,9 +106,14 @@
 
 <body>
 	<header class="site-header" id="siteHeader">
-		<a href="/" class="logo-link">
-			<img src="img/reiwachan.png" alt="Logo" class="header-logo">
-		</a>
+		<div class="header-logo-container">
+			<a href="/" class="logo-link">
+				<img src="img/reiwachan.png" alt="Logo" class="header-logo">
+			</a>
+			<div class="site-header-msg">
+				<h2>SNSを通じて、人々の便利を作る</h2>
+			</div>
+		</div>
 		<nav class="header-nav">
 			<a href="service.html">Service</a>
 			<a href="company.html">Company</a>
@@ -173,13 +178,13 @@
 
 					<div class="purpose-right">
 						<p>
-							ビジネスは、本来とても面白いものだ。<br><br>
+							ビジネスは、本来とても面白いものだ。<br>
 							たった1人の夢や想像から、<br>
-							世界に欠かせない存在へと変化する。<br><br>
+							世界に欠かせない存在へと変化する。<br>
 							小さなアイデアが、誰かの心を動かし、<br>
 							未来を動かす力になる。<br><br>
 							私たちは、すべてのクリエイター、挑戦者、起業家たちが、<br>
-							より自由に、自分らしく夢を追いかけられる世界を目指す。<br><br>
+							より自由に、自分らしく夢を追いかけられる世界を目指す。<br>
 							未来を想像し、未来を創造する。<br>
 							さぁ、共に新しい世界を拓こう。
 						</p>
@@ -210,13 +215,13 @@
 
 					<div class="mission-right">
 						<p>
-							「昨日驚いたことに、翌日人は驚かない。」<br><br>
+							「昨日驚いたことに、翌日人は驚かない。」<br>
 							テクノロジーが日々進化するこの時代に、<br>
 							人の情熱や、夢や、アイデアの力で、<br>
 							昨日までになかった「感動」「便利」「不可欠」を生み出せる。<br><br>
 							私たちは、<strong style="color: #f26ca7">今ここにない未来は、自分でつくる。</strong><br>
-							それをモットーに掲げ、<br>
-							日本を牽引する次世代の人材とサービスを創出していきます。<br><br>
+							それをモットーに掲げ、
+							日本を牽引する次世代の人材とサービスを創出していきます。<br>
 							革新を恐れず、未来を自らの手で切り拓く。<br>
 							その挑戦を、ここから始めます。
 						</p>
@@ -316,13 +321,8 @@
 					<a href="https://page.line.me/fhy3551i?openQrModal=true">Line</a>
 					<a href="https://www.instagram.com/reiwa_girls_official_/">Instagram</a>
 				</div>
-
-				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>〒108-0073<br>東京都港区三田1-11-22 SSTビル1階</p>
-				</div>
-
 				<div class="footer-bottom">
-					<small>© REIWAGIRLS</small>
+					<small>ReiwaGirls Co., Ltd.｜SNS運用・インフルエンサー支援・アパレル制作</small>
 				</div>
 			</div>
 
